# playwright-plugin

./: .gitignore  README.md
.agents/plugins/: marketplace.json
plugins/playwright-python/: README.md  pyproject.toml  requirements.txt
plugins/playwright-python/.codex-plugin/: plugin.json
plugins/playwright-python/examples/: catalog_recipe.json
plugins/playwright-python/scripts/: cli_smoke_test.py  smoke_test.py
plugins/playwright-python/skills/playwright-python/: SKILL.md
plugins/playwright-python/src/playwright_python/: __init__.py  automate.py  browser.py  cli.py  scrape.py
